Minor changes in Vanity Url Blog

--- a/blogs/vanityURLs.html
+++ b/blogs/vanityURLs.html
@@ -53,7 +53,7 @@
             <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Handelling Vanity URLs in AEM</p>
 
             <p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
-               width: fit-content; padding: 3px 15px;">Vanity URLs</p>
+               width: fit-content; padding: 3px 15px;">AEM Sites</p>
             <h1 class="title">Handelling Vanity URLs in AEM</h1>
             <span class="author">Infodales Tech Solutions</span> |
             <span class="date">July 9, 2023</span>
