Adaptive Form Fragment Blog

--- a/blogs/custom-button-and-console.html
+++ b/blogs/custom-button-and-console.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Getting started with AEM SPA</title>
+	<title>Blogs | Creating custom button & console in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog.">
-  	<meta name="keywords" content="Infodales, Adobe AEM SPA, Single Page Application, SPA component, SPA with AEM">
+	<meta name="description" content="Adobe Experience Manager (AEM) is a comprehensive content management solution for building websites, mobile apps, and forms. AEM's flexibility allows developers to customize its interface extensively. In this blog, we'll walk through the steps to create a custom button in the AEM console and how to add a custom navigation tab and console.">
+  	<meta name="keywords" content="Infodales, Adobe AEM, Custom button, Custom AEM console, AEM Console">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Getting started with AEM SPA" />
-    <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog." />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Getting started with AEM SPA" />
+    <meta property="og:title" content="Blogs | Creating custom button & console in AEM" />
+    <meta property="og:description" content="Adobe Experience Manager (AEM) is a comprehensive content management solution for building websites, mobile apps, and forms. AEM's flexibility allows developers to customize its interface extensively. In this blog, we'll walk through the steps to create a custom button in the AEM console and how to add a custom navigation tab and console." />
+    <meta property="og:url" content="https://infodales.com/blogs/custom-button-and-console.html" />
+    <meta property="og:site_name" content="Blogs | Creating custom button & console in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
