--- a/blogs/query-builder.html
+++ b/blogs/query-builder.html
@@ -5,14 +5,14 @@
 	<title>Blogs | GraphQL in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Understanding and implenting GraphQL in AEM">
-    <meta name="keywords" content="Infodales, GraphQL in AEM">
+   <meta name="description" content="In Adobe Experience Manager (AEM), a Query Builder is a powerful and flexible tool that allows us to create and execute queries to retrieve content from the AEM repository. It provides a structured and efficient way to search for specific content based on various criteria.">
+    <meta name="keywords" content="Infodales, Query Builder in AEM, Query, Predicates, AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | GraphQL in AEM" />
-    <meta property="og:description" content="Understanding and implenting GraphQL in AEM" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | GraphQL in AEM" />
+    <meta property="og:title" content="Blogs | Query Builder in AEM" />
+    <meta property="og:description" content="In Adobe Experience Manager (AEM), a Query Builder is a powerful and flexible tool that allows us to create and execute queries to retrieve content from the AEM repository. It provides a structured and efficient way to search for specific content based on various criteria." />
+    <meta property="og:url" content="https://infodales.com/blogs/query-builder.html" />
+    <meta property="og:site_name" content="Blogs | Query Builder in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
