--- a/blog.html
+++ b/blog.html
@@ -288,6 +288,19 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/adaptive-form-fragments.html" style="text-decoration: none;" class="blog-item">
+				<div id="forms" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Forms.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="formsTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Forms</p>
+						<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms : Adaptive Form Fragments</p>
+						<p class="publishDate">Aug 24, 2023</p>
+					</div>
+				</div>
+			</a>
 		</div>
 	</section>
 
