--- a/blogs/spa-getting-started.html
+++ b/blogs/spa-getting-started.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blogs | Getting started with AEM SPA" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog." />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
+    <meta property="og:url" content="https://infodales.com/blogs/spa-getting-started.html" />
     <meta property="og:site_name" content="Blogs | Getting started with AEM SPA" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
