--- a/blog.html
+++ b/blog.html
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="./blogs/ContextAware.html" style="text-decoration: none;" class="blog-item">
+			<!-- <a href="./blogs/ContextAware.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
 					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
@@ -209,7 +209,7 @@
 						<p class="publishDate">Sep 09, 2023</p>
 					</div>
 				</div>
-			</a>
+			</a> -->
 			<a href="./blogs/form-submission.html" style="text-decoration: none;" class="blog-item">
 				<div id="forms" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
