Targeting & Indexing Blogs

--- a/blog.html
+++ b/blog.html
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 			</a>
-			<!-- <a href="./blogs/ContextAware.html" style="text-decoration: none;" class="blog-item">
+			<a href="./blogs/targeting-in-aem.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
 					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
@@ -205,11 +205,24 @@
 						<p class="sitesTag"
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
-						<p class="blog-title" style="font-size: 1em; color: #555;">Context Aware Configuration in Adobe Experience Manager (AEM)</p>
-						<p class="publishDate">Sep 09, 2023</p>
+						<p class="blog-title" style="font-size: 1em; color: #555;">Targeting in AEM - Part 1</p>
+						<p class="publishDate">November 09, 2023</p>
 					</div>
 				</div>
-			</a> -->
+			</a>
+			<a href="./blogs/indexing.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<p class="blog-title" style="font-size: 1em; color: #555;">Indexing in AEM</p>
+						<p class="publishDate">November 24, 2023</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/form-submission.html" style="text-decoration: none;" class="blog-item">
 				<div id="forms" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
