--- a/blogs/targeting-in-aem.html
+++ b/blogs/targeting-in-aem.html
@@ -5,12 +5,12 @@
 	<title>Blogs | Targeting in AEM - Part 1</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog.">
+	<meta name="description" content="Content personalization in short means delivering the right content to the right person in real-time.">
   	<meta name="keywords" content="Infodales, Adobe AEM, Targeting, Personalization, Targeting in AEM">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blogs | Targeting in AEM - Part 1" />
-    <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog." />
+    <meta property="og:description" content="Content personalization in short means delivering the right content to the right person in real-time." />
     <meta property="og:url" content="https://infodales.com/blogs/targeting-in-aem.html" />
     <meta property="og:site_name" content="Blogs | Targeting in AEM - Part 1" />
 	<link rel="stylesheet" href="/style.css">
@@ -19,7 +19,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
