--- a/blogs/indexing.html
+++ b/blogs/indexing.html
@@ -26,7 +26,7 @@
 
 	<!-- Header -->
 	<section class="sub-header"
-		style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ Forms.jpg');">
+		style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ Sites.jpg');">
 		<nav>
 			<a href="/index.html"><img src="/images/infodales/Info Dales Main Logo 03.webp" alt="logo"></a>
 			<div class="nav-links" id="navLinks">
@@ -51,7 +51,7 @@
 
 				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>  AEM Sites : Indexing in AEM</p>
 
-				<p class="formsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
+				<p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
 				width: fit-content; padding: 3px 15px;">AEM Sites</p>
 				<h1 class="title">AEM Sites : Indexing in AEM</h1>
       				<span class="author">Infodales Tech Solutions | </span>
