--- a/blogs/google-api-form.html
+++ b/blogs/google-api-form.html
@@ -101,10 +101,10 @@
 						<p>Select multiple Text Box to fetch data dynamically.</p>
 						<img src="/images/GoogleAPIs-aff/AF 04.JPG" alt="Adaptive Form Home ">
 						<p>Select the rule editor to provide the API key and fetch data using that key. You will use the code editor to write the necessary code for this operation.</p>
-						<img src="/images/GoogleAPIs-aff/AF 05.JPG" alt="Adaptive Form Home ">
-						<img src="/images/GoogleAPIs-aff/AF 06.JPG" alt="Adaptive Form Home ">
+						<img src="/images/GoogleAPIs-aff/AF 05.jpg" alt="Adaptive Form Home ">
+						<img src="/images/GoogleAPIs-aff/AF 06.jpg" alt="Adaptive Form Home ">
 						<img src="/images/GoogleAPIs-aff/AF 07.JPG" alt="Adaptive Form Home ">
-						<img src="/images/GoogleAPIs-aff/AF 09.JPG" alt="Adaptive Form Home ">
+						<img src="/images/GoogleAPIs-aff/AF 09.jpg" alt="Adaptive Form Home ">
 					</div>	
 					<p>Source code similar to Adobe AEM Forms Documents</p>
 					<div class="code-block">
