--- a/blog.html
+++ b/blog.html
@@ -197,6 +197,19 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/context-aware-configuration.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<p class="blog-title" style="font-size: 1em; color: #555;">Context Aware Configuration</p>
+						<p class="publishDate">November 09, 2023</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/targeting-in-aem.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
@@ -206,7 +219,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Sites</p>
 						<p class="blog-title" style="font-size: 1em; color: #555;">Targeting in AEM - Part 1</p>
-						<p class="publishDate">November 09, 2023</p>
+						<p class="publishDate">August 01, 2024</p>
 					</div>
 				</div>
 			</a>
@@ -245,7 +258,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<p class="blog-title" style="font-size: 1em; color: #555;">Show Hide in Rule Editor</p>
-						<p class="publishDate">September 24, 2023</p>
+						<p class="publishDate">July 04, 2024</p>
 					</div>
 				</div>
 			</a>
@@ -258,7 +271,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<p class="blog-title" style="font-size: 1em; color: #555;">Custom Prefill Services In AEM Forms</p>
-						<p class="publishDate">September 09, 2023</p>
+						<p class="publishDate">June 20, 2024</p>
 					</div>
 				</div>
 			</a>
@@ -271,7 +284,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<p class="blog-title" style="font-size: 1em; color: #555;">Geolocation : AEM Forms with Dynamic Location</p>
-						<p class="publishDate">October 09, 2023</p>
+						<p class="publishDate">July 19, 2024</p>
 					</div>
 				</div>
 			</a>
@@ -284,7 +297,7 @@
 							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
 							AEM Forms</p>
 						<p class="blog-title" style="font-size: 1em; color: #555;">AEM Forms with Google Maps API's</p>
-						<p class="publishDate">October 24, 2023</p>
+						<p class="publishDate">August 03, 2024</p>
 					</div>
 				</div>
 			</a>
